düzeltme yapıldı getuserpassword kontrol edilecek

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -5,7 +5,7 @@
     <string name="login_successful">Giriş Başarılı</string>
     <string name="save">Giriş Bilgilerini Kaydet</string>
     <string name="user_password">Kullanıcı Şifre</string>
-    <string name="user_name">Kullanıcıc Adı</string>
+    <string name="user_name">Kullanıcı Adı</string>
     <string name="login">Giriş</string>
     <string name="change_language">Dil Değiştir</string>
 </resources>
